--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>United States Educational Attainment</h1>
-    <p>Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</p>
+    <h1 id="title">United States Educational Attainment</h1>
+    <p id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</p>
   </header>
 
   <main>
     <div class="svg-container"></div>
   </main>
 
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
