--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <body>
   <header>
     <h1 id="title" class="title">United States Educational Attainment</h1>
-    <p id="description" class="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</p>
+    <p id="description" class="description">
+      Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)
+    </p>
   </header>
 
   <main>
     <div class="svg-container"></div>
+    <p class="source">
+      Source: <a href="https://www.ers.usda.gov/data-products/county-level-data-sets/download-data.aspx" target="_blank" rel="external">USDA Economic Research Service</a>
+    </p>
   </main>
 
   <script src="script.js" type="module"></script>
