--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   <script src="script.js" type="module"></script>
   <script src="https://unpkg.com/topojson-client@3"></script>
+
+  <!-- Test suite provided by FreeCodeCamp -->
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
